--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,6 +30,13 @@ $grid-width: 114rem;
 $gap-vertical: 6rem;
 $gap-horizantal: 6rem;
 
+
+
+.main-nav a {
+    margin-right: 20px;
+}
+
+
 .box {
     margin: 0 auto;
     width: 100vw;
