--- a/app/views/packages/new.html.erb
+++ b/app/views/packages/new.html.erb
@@ -4,6 +4,7 @@
       <nav class="main-nav">
         <div>
           <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+          <%= link_to 'Back', packages_path, class:'main-nav' %>
         </div>
       </nav>
       <% else %>
@@ -92,6 +93,5 @@
     </div>
 
     <footer>
-      holder
     </footer>
   </div>
