--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -78,14 +78,14 @@ $gap-horizantal: 6rem;
 .bubble.-three {
     height: 300px;
     width: 300px;
-    background: white;
+    background: transparent;
     border-radius: 48.5%;
     position: relative;
     top: -570px;
     margin: 0 auto;
     opacity: 0;
     animation: fadeIn 500ms forwards linear;
-    animation-delay: 6.5s;
+    animation-delay: 2.2s;
 }
 
 .bubble.-four {
@@ -99,22 +99,27 @@ $gap-horizantal: 6rem;
     position: relative;
     margin: 0 auto;
     opacity: 0;
-    animation: fadeIn 490ms forwards linear, rotate 2000ms infinite linear;
-    animation-delay: 6.5s;
+    animation: fadeIn 200ms forwards linear, rotate 2000ms infinite linear;
+    animation-delay: 2.2s;
 
+}
+
+#title {
+    font-size: 3rem;
+    margin-bottom: 40px;
 }
 
 .title {
     position: absolute;
     left: 7px;
+    top: 80px;
     width: 100%;
     z-index: 1;
-    line-height: 300px;
     text-align: center;
     color: black;
     text-transform: uppercase;
     letter-spacing: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Raleway',
     sans-serif;
 }
@@ -123,7 +128,7 @@ $gap-horizantal: 6rem;
     top: 450px;
     position: relative;
     transition: 3s ease-in;
-    animation: float_in 6000ms forwards linear;
+    animation: float_in 7000ms forwards linear;
 }
 
 .ducky {
@@ -145,8 +150,7 @@ $gap-horizantal: 6rem;
     font-family: 'Raleway',
     sans-serif;
     text-decoration: none !important;
-    top: -200px;
-    left: -7px;
+    top: 55px;
     font-size: 1.5rem;
 
 }
